# projectx

./: CMakeLists.txt  LICENSE  README.md
cmake/: Macros.cmake
examples/: CMakeLists.txt
examples/src/: ex.cpp  ex2.cpp
internal/nn/dloader/: loader.cpp  loader.h
internal/nn/fundamental/: CMakeLists.txt  expression-inl.h  expression.h  init-static.cpp  initializer.h  macro.h  primitives.h  shape.h  storage.h  stream.h  tensor-inl.h  tensor.h
internal/nn/fundamental/cuda/: data-inl.cu  data-inl.cuh  data.cuh  initializer.cu  initializer.cuh  stream-inl.cuh
internal/nn/fundamental/image/: .image.h.swp  image.cpp  image.h
internal/nn/fundamental/linalg/: linalg_base.h  matmul.h
internal/nn/fundamental/transform/: transform_base.h  transform_concat.h  transform_permute.h  transform_reducer.h  transform_repeat.h  transform_slice.h  transform_so.h
internal/nn/nn/: activation.h  activation_funcs.h  bias.h  container.h  conv.h  fully.h  gradient_check.h  initializer.h  layer.h  optimizer.h
internal/nn/ops/: gemm.h  interpolation.cu  interpolation.h  reducers.h  transform.h
tests/: CMakeLists.txt
tests/modules/: image.test.cpp  meta_loader.test.cpp  nn_layers.test.cpp  shape.test.cpp  tensor.test.cpp  tensor_linalg.test.cpp  tensor_transform.test.cpp
